refactor(app): retire legacy HUD paths and update options UI
Fixed:
- hide the HUD control for unsupported stock Google Maps while retaining log-only diagnostics;
- preserve historical Waze crop sessions in storage inventory, sharing, deletion, and retention after removing the runtime path.

Changed:
- replace the scrolling options page with a fixed seven-category sidebar, category icons, and independently scrolling content;
- apply production dashboard profiles with Full and Partial defaults, independent persisted geometry, and a 20–150% scale range;
- restrict navigator HUD and TBT ownership to supported direct Waze and Google Maps ReVanced channels while keeping accessibility and notification services diagnostic-only;
- remove the unsupported Waze screen-capture and Google Maps legacy fallback pipeline, including MediaProjection components, obsolete controls, lifecycle arbitration, parsers, classes, and tests.

Added:
- add the transparent Waze category icon and dedicated option-category vector assets;
- extend regression coverage for direct-only ingress, dashboard profile defaults, stock Maps gating, sidebar behavior, and historical log retention.

Chore:
- update the English and Ukrainian README for direct-only navigation, dashboard profile defaults, troubleshooting, and limitations.